# hackerrank-orchestrate-may26

./: PRODUCT_README.md  README.md  pyproject.toml  supportrag.py
code/: README.md  agent.py  classifier.py  cli.py  corpus.py  evaluate.py  ingest_url.py  io_utils.py  main.py  models.py  paraphraser.py  product_workflow.md  retrieval.py  rules.py  text_utils.py  validation.py
code/tests/: test_pipeline.py
examples/: README.md  output.csv  tickets.csv
support_tickets/: output.csv
